# flem-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  static.yml
docs/: all.html  constant.FLEM_HEADER.html  constant.FLEM_HEADER_SIZE.html  enum.Response.html  enum.Status.html  index.html  sidebar-items.js  struct.DataId.html  struct.Packet.html  struct.Request.html
examples/: encode_decode.rs  example.rs  flem-example.rs  software_host.rs  software_host_complex.rs  software_host_simple.rs  traits.rs
src/: buffer.rs  flem.rs  lib.rs  traits.rs
tests/: flem-tests.rs  tests.rs
