[package]
name = "flemrs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flem"
crate-type = ["lib"]
bench = false
path = "src/lib.rs"

[[example]]
name = "flem-rs"
path = "examples/flem-example.rs"

[dependencies]
