[package]
name = "flem"
version = "0.6.2"
edition = "2021"
description = "Flexible, Light-weight, Embedded Messaging Protocol"
repository = "https://github.com/BridgeSource/flem-rs.git"
readme = "README.md"
keywords = ["embedded", "communication", "protocol",]
authors = ["Austin McElroy <mcelroy.austin@gmail.com, amcelroy@bridgesourcemedical.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[lib]
name = "flem"
crate-type = ["lib"]
bench = false
path = "src/lib.rs"

[[example]]
name = "flem"
path = "examples/example.rs"

[[example]]
name = "traits"
path = "examples/traits.rs"

[[example]]
name = "software_host_simple"
path = "examples/software_host_simple.rs"

[[example]]
name = "software_host_complex"
path = "examples/software_host_complex.rs"

[dev-dependencies]
heapless = "0.7"
